fixed spacing above first p in about

--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,7 @@ header .top-header {
 }
 
 .about .details p {
-    margin: 0 8vh 4vh 8vh;
+    margin: 4vh 8vh;
 }
 
 .about .details .dot {
